@startuml
interface Direccion{
hallarCoordenadaSiguiente(coordenada):Coordenada
}

class Coordenada{
-x:int
-y:int
+Coordenada(x:int,y:int)
+calcularDiferenciaEnX(x:int):int
+calcularDiferenciaEnX(coordenada):int
+calcularDiferenciaEnY(coordenada):int
+calcularDiferenciaEnY(Y:int):int
+esIgual(coordenada):bool
+hallarCoordenadasAdyacentes():List<Coordenada>
+hallarCoordenadasAdyacentes(rango:int):List<Coordenada>
+seEncuentraEnListaDeCoordenadas(listaCoordenadas):bool
+seEncuentraACiertoRangoDeOtraCoordenadas(cordenadadaCentral,rango):bool
+devolverCoordenadaRelativa(x,y):Coordenada
+devolverX():int
+devolverY():int
+toData():ObjectNode
devolverValorComoString():String
}
class SuperficieRectangular{
-cordenadaInicial:Coordenada
-cordenadaFinal:Coordenada
+SuperficieRectangular(coordendaInicial,coordendaFinal)
+redimensionar(indiceRescala:int):SuperficieRectangular
+devolcerCoordenadasAlBorde():List<Coordenada>
+calcularLongitudY():int
+calcularLongitudX():int
+calcularLongitudPromedio():int
+contieneCoordenadaEnX(coordenada):bool
+contieneCoordenadaEnY(coordenada):bool
+contieneCoordenada(coordenada):bool
+filtrarListaDeCoordenadas(listaCoordenadas):List<Coordenada>
+devolverCoordenadasAdyacentes(coordenadasCental):List<Coordenada>
+devolverCoordenadasAdyacentes(coordenadas,rango):List<Coordenada>
+hallarCoordenadaCentral():Coordenada
+buscarCoordenadaCentral():Coordenada
+devolverCoordenadasAlAzarEvitando(listaCoordenada,rango):Coordenada
'+devolverCoordenadasAlAzarEvitando(listaCoordenada):Coordenada
'+calcularSuperficie():int
+transformarCoordenadaRelativamenteAlCento(coordenada,x,y):Coordenada

}
SuperficieRectangular --> Coordenada
Direccion .> Coordenada
Direccion <|.. Abajo
Direccion <|.. Arriba
Direccion <|.. Derecha
Direccion <|.. Izquierda
@enduml